2011-10-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (socketpair): Bind first socket to loopback only as well.

2011-09-21  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* tty.cc (grantpt): Check for valid fd.
	(unlockpt): Ditto.

2011-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getsockopt): Drop erroneous double conversion of error
	code returned by SOL_SOCKET/SO_ERROR.  Fix error handling.

2011-09-01  Corinna Vinschen  <corinna@vinschen.de>

	* lc_msg.h: Regenerate.

2011-09-01  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (gfpod_helper): Helper function to search DLL using
	a given DLL name.  Change default search path to allow /usr/bin.
	(get_full_path_of_dll): Find DLLs even if the caller used a ".so"
	suffix or a "lib" prefix for the DLL.

2011-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (inode_t::unlock_and_remove_if_unused): Rename from
	unlock_and_remove.

2011-08-29  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (LOCK_OBJ_NAME_LEN): Change to accommodate extra lf_ver
	field.
	(class lockf_t): Add lf_ver field.
	(lockf_t::lockf_t): Initialize lf_ver to 0.
	(class inode_t): Change i_wait to i_cnt.  Change comment to explain
	change in usage.
	(inode_t:use): Rename from wait.  Make private.
	(inode_t::unuse): Rename from unwait.  Make private.
	(inode_t::inuse): Rename from waiting.  Make private.
	(inode_t::notused): New public method to set use count to 0.
	(inode_t::unlock_and_remove): New method to unlock node and to delete
	it if it's unused in current process.
	(fhandler_base::del_my_locks): Drop global list lock.  Drop variable
	no_locks_left.  Simpify unlocking and removing node by just calling
	unlock_and_remove.
	(fixup_lockf_after_exec): Call notused method for each node.
	(inode_t::get): Call use method.  Lock node only if outside of list
	lock.
	(inode_t::get_all_locks_list): Accommodate additional lf_ver field
	when creating lockf_t structure from object name.