@@ -420,12 +420,13 @@ details. */
       249: Export pthread_condattr_getclock, pthread_condattr_setclock.
       250: Export clock_nanosleep.
       251: RTLD_NODELETE, RTLD_NOLOAD, RTLD_DEEPBIND added.
+      252: CW_CVT_ENV_TO_WINENV added.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 251
+#define CYGWIN_VERSION_API_MINOR 252
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
