@@ -134,7 +134,8 @@ typedef enum
     CW_INT_SETLOCALE,
     CW_CVT_MNT_OPTS,
     CW_LST_MNT_OPTS,
-    CW_STRERROR
+    CW_STRERROR,
+    CW_CVT_ENV_TO_WINENV
   } cygwin_getinfo_types;
 
 /* Token type for CW_SET_EXTERNAL_TOKEN */
